<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="br.com.gok.android.ui.main.MainViewModel" />
    </data>

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.main.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="@{viewModel.showLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgWelcome"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/sempre_it_logo_desc"
                android:src="@drawable/ic_android_rounded"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/user_welcome_title"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgWelcome"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgWelcome"
                app:layout_constraintTop_toTopOf="@+id/imgWelcome" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSpotlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:orientation="horizontal"
                android:visibility="@{viewModel.showError == null ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgWelcome"
                tools:ignore="RtlSymmetry">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/txtCashDescOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/digio"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textStyle="bold"
                android:visibility="@{viewModel.showError == null ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerSpotlight" />

            <TextView
                android:id="@+id/txtCashDescTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cash"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textColor="@color/colorGray"
                android:textStyle="bold"
                android:visibility="@{viewModel.showError == null ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/txtCashDescOne"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/txtCashDescOne"
                app:layout_constraintTop_toTopOf="@+id/txtCashDescOne" />

            <ImageView
                android:id="@+id/imgCash"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/cash_logo"
                android:visibility="@{viewModel.showError == null ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCashDescOne" />

            <TextView
                android:id="@+id/txtProducts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_products"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"
                android:visibility="@{viewModel.showError == null ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgCash" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:visibility="@{viewModel.showError == null ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtProducts"
                app:layout_constraintVertical_bias="0.0">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>